--- a/01-HTML_Level_One/Portfolio_master.css
+++ b/01-HTML_Level_One/Portfolio_master.css
@@ -13,12 +13,65 @@ Selected Tag {
 
 /*Colors can be names, or codes*/
 
-body{
-  background-color: #39e3fa;
-}
-
 h1{
   color: #f2a941;
+  text-align: center;
+  margin: auto;
+  padding: 1% 0 2% 0;
+}
+
+body{
+  background-color: #39e3fa;
+  font-size: 1.1em;
+  padding: 0 2.5% 5% 2.5%
+}
+
+.mainParent{
+  border: 0.5px solid white;
+}
+
+.main{
+  /*border: 1px solid black;*/
+  display: inline-block;
+  padding: 1.8em;
+}
+
+#main1{
+  /*border: 1px solid black;*/
+  padding-top: 5%;
+  padding-bottom: 17%;
+  margin-left: 5%;
+  margin-top: 2%;
+}
+
+#main2{
+  /*border: 1px solid black;*/
+  margin-left: 11%;
+  margin-right: 11%;
+  
+}
+
+#main3{
+  /*border: 1px solid black;*/
+  margin-right: 5%;
+  padding-top: 5%;
+  padding-bottom: 15%;
+}
+
+a:visited{
+  color: blue;
+}
+
+a:active{
+  color: darkblue;
+}
+
+a:default{
+  color: #f29410;
+}
+
+#skills{
+  text-align: center;
 }
 
 h4{
@@ -42,10 +95,11 @@ li {
 }
 
 #text{
+  background-color: #75ebfa;
   color: #000000;
-  border: 3px dotted black;
+  border: 3px dotted rgb(235, 158, 70);
 }
 
-.main{
-  border: 4px solid black;
+*{
+  font-family: Arial, Helvetica, sans-serif;
 }
