--- a/01-HTML_Level_One/Portfolio_master.css
+++ b/01-HTML_Level_One/Portfolio_master.css
@@ -40,25 +40,24 @@ body {
   /*border: 1px solid black;*/
   padding-top: 5%;
   padding-bottom: 17%;
-  margin-left: 5%;
+  /* margin-left: 1%; */
   margin-top: 2%;
 }
 
-#main2 {
-  /*border: 1px solid black;*/
-  margin-left: 11%;
-  margin-right: 2%;
-}
+/* #main2 {
+  margin-left: 1%;
+  margin-right: 1%;
+} */
 
 #main3 {
   /*border: 1px solid black;*/
-  margin-right: 5%;
-  padding-top: 5%;
+  /* margin-right: 1%; */
+  padding-top: 10%;
   padding-bottom: 15%;
 }
 
 #email {
-  color: blue;
+  color: rgb(0, 0, 0);
 }
 
 a:visited {
