--- a/front-end/Portfolio_master.css
+++ b/front-end/Portfolio_master.css
@@ -85,3 +85,10 @@ li {
   height: 25px;
   width: 25px;
 }
+
+/* #changeColorScheme {
+  height: 30px;
+  width: 30px;
+  border: 1px solid black;
+  border-radius: 50%;
+} */
